[gd_scene load_steps=8 format=3 uid="uid://niy2pgrlk6au"]

[ext_resource type="Script" path="res://Assets/Modules/Decor/Views/DecorAutomaticMachineView.gd" id="1_vgh82"]
[ext_resource type="Texture2D" uid="uid://cqewojfj7au7x" path="res://Assets/Textures/Stage/carbonizer_table.png" id="2_3w2lf"]
[ext_resource type="Theme" uid="uid://d3ht3ymqa0arj" path="res://Assets/Modules/UI/Themes/field_slider_theme.tres" id="3_ja8a1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wsks1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sd36r"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gglkp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ysvh"]
size = Vector2(104, 120)

[node name="CarbonizerTable" type="Node2D" node_paths=PackedStringArray("ItemSprite", "HoverButton", "InteractArea", "ProgressSlider")]
script = ExtResource("1_vgh82")
ItemSprite = NodePath("ItemSprite")
HoverButton = NodePath("DecorSprite/HoverButton")
InteractArea = NodePath("InteractArea")
MachineName = "carbonizer"
ProgressSlider = NodePath("ProgressSlider")

[node name="DecorSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_3w2lf")
offset = Vector2(0, -40)

[node name="HoverButton" type="Button" parent="DecorSprite"]
modulate = Color(2, 2, 2, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -116.245
offset_top = -186.0
offset_right = 3.755
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/hover = SubResource("StyleBoxTexture_wsks1")
theme_override_styles/pressed = SubResource("StyleBoxTexture_sd36r")
theme_override_styles/normal = SubResource("StyleBoxTexture_gglkp")
icon = ExtResource("2_3w2lf")

[node name="ItemSprite" type="Sprite2D" parent="."]
position = Vector2(-28, -11)
offset = Vector2(0, -48)

[node name="InteractArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
position = Vector2(52, 76)
shape = SubResource("RectangleShape2D_8ysvh")
debug_color = Color(0.515554, 0.576144, 3.85046e-07, 0.42)

[node name="ProgressSlider" type="HSlider" parent="."]
z_index = 1
offset_left = -72.0
offset_top = -128.0
offset_right = 72.0
offset_bottom = -96.0
mouse_filter = 2
theme = ExtResource("3_ja8a1")
step = 0.05
